# livestream-morphing

./: .dockerignore  .env.example  .gitignore  ADMIN_SETUP.md  DEBUG_HEADER.md  Dockerfile  Makefile  QUICKSTART.md  README copy.md  README.md  SCREENSHOT_GUIDE.md  api.py  api_v2.py  app.py  build_cpp.sh  celery_config.py  docker-compose.yml  first_iteration.py  image_processing.py  main.html  pyproject.toml  requirements.txt  screenshot_browser.py  second_iteration.py  setup.py  stream_process.drawio  tasks.py  temperature_helpers.py  test.py  test_fast_oil.py  video_creation.py
.claude/commands/: debug-css.md  screenshot.md
.github/workflows/: main.yml
admin-app/: package.json
admin-app/src/: App.css  App.tsx  index.css
admin-app/src/components/: CodeEditor.tsx  Header.tsx  VideoPreview.tsx
admin-app/src/components/ui/: button.tsx  slider.tsx
backend/: main.py  requirements.txt  run.sh
backend/api/: admin.py  stream.py
backend/core/: fast_oil_painting.cpp  fast_processor.cpp  fast_processor.cpp.bak  image_processing.py  image_processing.py.bak  processor.py
backend/utils/: s3.py  video_creation.py
research/: api.py  app.py  app_v2.py  image_tester.py  process_frame.py  redis-test.py  scripts.py  temperature_helpers.py  third-iteration.py  visualize.py
style-transfer/: BENCHMARK_RESULTS.md  QUICKSTART.md  README.md  requirements.txt  setup.sh  test_inference_speed.py  train.py
style-transfer/notebooks/: 01_setup_and_quicktest.ipynb  benchmark_with_progress.ipynb
templates/: index.html  main.html
