[tool.poetry]
name = "livestream-morphing"
version = "2.0.0"
description = "Real-time video processing system for Abbey Road livestream"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
av = "^13.1.0"
opencv-python = "^4.9.0"
ffmpeg-python = "^0.2.0"
numpy = "^1.26.4"
m3u8 = "^4.0.0"
pytz = "^2024.1"
pydantic = "^2.6.4"
# Neural style transfer dependencies
torch = "^2.0.0"
torchvision = "^0.15.0"
pillow = "^10.0.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipywidgets = "^8.0.0"
matplotlib = "^3.7.0"
onnx = "^1.14.0"
onnxruntime = "^1.15.0"
tqdm = "^4.65.0"
gdown = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
